language/move-lang/tests/move_check/translated_ir_tests/move/borrow_tests/factor_invalid_2.exp
error[E07002]: mutable ownership violated
  ┌─ tests/move_check/translated_ir_tests/move/borrow_tests/factor_invalid_2.move:8:9
  │
6 │         let eps = if (cond) bar(root) else &x1;
  │                             --------- It is still being borrowed by this reference
7 │         // Error: root has weak empty borrow and hence a field cannot be borrowed mutably
8 │         &mut root.g;
  │         ^^^^^^^^^^^ Invalid mutable borrow at field 'g'.

